[package]
name = "unicron-backend-api"
version = "0.1.0"
authors = ["CRE"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
thiserror = "1.0.24"
anyhow = "1.0.40"
dotenv = "0.15.0"
lazy_static = "1.4.0"
async-trait = "0.1.50"

serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.64"

futures = "0.3.14"
schemars = "0.8.6"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
either = "1.6.1"

reqwest = "0.11.4"

kube = { version = "0.63.2", features = ["runtime","derive","client"] }
kube-client = { version = "0.63.2"}
kube-core = { version = "0.63.2"}
kube-derive = { version = "0.63.2", default-features = false }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }

handlebars = { version = "4.1.3", default-features = false, features = ["dir_source"] }

actix-rt = "2.3.0"
actix-web = "4.0.0-beta.9"
actix-web-prom = "0.5.1"

git2 = "0.13"
ureq = "2.3.1"
kv = { version = "0.22.0", features = ["bincode-value"] }
regex = "1.5.4"
base64 = "0.13.0"

[dev-dependencies]
mock-it = "0.3.0"

serde = "1.0"
serde_json = "1.0"
